# Flappy

./: CMakeLists.txt  README.md  run.sh
Flappy/src/: entity.cpp  entity.h  main.cpp
